# monitor_precos

./: pyproject.toml
src/monitor_precos/: main.py
