[project]
name = "monitor-precos"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Soier",email = "vitorsoier1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[tool.poetry]
packages = [{include = "monitor_precos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



