[project]
name = "monitor-precos"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Soier",email = "vitorsoier1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "monitor_precos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



